[tool.poetry]
name = "parse-pass-from-cod"
version = "0.1.0"
description = "root pass parsing utils"
authors = ["Grigory Bubnov <sky1su@ya.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pyyaml = "^6.0.1"
requests-html = "^0.10.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
